--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,8 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/main/main.js"></script>
+          <script src="app/taskLists/taskList.js"></script>
+          <script src="app/taskLists/taskLists.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/modal/modal.js"></script>
