feature: autofocus for forms

--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/focusWhen/focusWhen.js"></script>
           <script src="app/taskLists/taskList.js"></script>
           <script src="app/taskLists/taskLists.js"></script>
           <script src="components/auth/auth.js"></script>
