feature: showing and adding tasks to task lists

--- a/client/index.html
+++ b/client/index.html
@@ -69,7 +69,8 @@
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/focusWhen/focusWhen.js"></script>
-          <script src="app/taskLists/taskList.js"></script>
+          <script src="app/taskList/taskList.js"></script>
+          <script src="app/taskListDetails/taskListDetails.js"></script>
           <script src="app/taskLists/taskLists.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
