--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
           <script src="app/taskLists/taskLists.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
+          <script src="components/footer/footer.js"></script>
           <script src="components/modal/modal.js"></script>
           <script src="components/mongoose-error/mongoose-error.js"></script>
           <script src="components/navbar/navbar.js"></script>
