--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script type="text/javascript">
+      if (!window.require) {
+        document.write('<base href="/"/>');
+      }
+    </script>
     <title>TasksJS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -63,8 +68,8 @@
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
-        <script>
-          if (require) {
+        <script type="text/javascript">
+          if (window.require) {
             window._ = require('lodash');
           }
         </script>
