--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="app/focusWhen/focusWhen.js"></script>
           <script src="app/taskList/taskList.js"></script>
           <script src="app/taskListDetails/taskListDetails.js"></script>
+          <script src="app/taskListSharing/taskListSharing.js"></script>
           <script src="app/taskLists/taskLists.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
