--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/bootstrap.growl/bootstrap-growl.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -87,6 +88,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/focusWhen/focusWhen.js"></script>
           <script src="app/taskList/taskList.js"></script>
+          <script src="app/taskList/taskListErrorResolver.js"></script>
           <script src="app/taskListDetails/taskListDetails.js"></script>
           <script src="app/taskListSharing/taskListSharing.js"></script>
           <script src="app/taskLists/taskLists.js"></script>
@@ -96,6 +98,7 @@
           <script src="components/modal/modal.js"></script>
           <script src="components/mongoose-error/mongoose-error.js"></script>
           <script src="components/navbar/navbar.js"></script>
+          <script src="components/notify/notify.js"></script>
           <script src="components/socket/socket.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
