fix: base tag left for web app and removed for nodewebkit and phonegap apps

--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,7 @@
 
     <!-- injector:phonegap:js -->
     <!-- endinjector -->
-
-    <script type="text/javascript">
-      if (!window.isPhoneGap && !window.isNodeWebkit) {
-        document.write('<base href="/"/>');
-      }
-    </script>
+    <base href="/"/>
 
     <title>TasksJS</title>
     <meta name="description" content="">
